exports[`Component ObjectViewer should render 1`] = `
<div
  className="tc-object-viewer" />
`;

exports[`Container ObjectViewer should render 1`] = `
<div
  className="mock-provider">
  <div
    className="tc-object-viewer" />
</div>
`;
